--- a/config/install/core.entity_view_display.media.file.default.yml
+++ b/config/install/core.entity_view_display.media.file.default.yml
@@ -33,6 +33,11 @@ content:
       thousand_separator: ''
       prefix_suffix: true
     third_party_settings: {  }
+  field_gemini_uri:
+    weight: 7
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_media_file:
     label: visually_hidden
     settings:
