--- a/islandora_defaults.info.yml
+++ b/islandora_defaults.info.yml
@@ -1,5 +1,5 @@
 name: 'Islandora Defaults'
-description: 'A functional example that can be used to learn how content modeling works in CLAW.'
+description: 'Default configuration for Islandora 8.'
 type: module
 core: 8.x
 dependencies:
