--- a/islandora_defaults.info.yml
+++ b/islandora_defaults.info.yml
@@ -18,6 +18,7 @@ dependencies:
   - islandora_audio
   - islandora_core_feature
   - islandora_image
+  - islandora_text_extraction_defaults
   - islandora_video
   - language
   - link
