--- a/config/install/context.context.repository_content.yml
+++ b/config/install/context.context.repository_content.yml
@@ -17,6 +17,7 @@ conditions:
   node_type:
     id: node_type
     bundles:
+      collection: collection
       islandora_object: islandora_object
     negate: 0
     context_mapping:
