--- a/config/install/field.field.node.collection.field_member_of.yml
+++ b/config/install/field.field.node.collection.field_member_of.yml
@@ -3,18 +3,15 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_member_of
-    - node.type.islandora_object
-  enforced:
-    module:
-      - islandora_defaults
-id: node.islandora_object.field_member_of
+    - node.type.collection
+id: node.collection.field_member_of
 field_name: field_member_of
 entity_type: node
-bundle: islandora_object
+bundle: collection
 label: 'Member of'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
@@ -22,9 +19,8 @@ settings:
   handler_settings:
     target_bundles:
       collection: collection
-      islandora_object: islandora_object
     sort:
       field: _none
     auto_create: false
-    auto_create_bundle: collection
+    auto_create_bundle: ''
 field_type: entity_reference
